--- a/src/res/index.css
+++ b/src/res/index.css
@@ -154,6 +154,7 @@ body {
 }
 
 .na-table tr {
+    display: flex;
     width: 100%;
     height: 1.7rem;
 }
@@ -171,20 +172,27 @@ body {
 }
 
 .na-table th {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 0.7rem;
     font-weight: lighter;
     background-color: rgb(110, 110, 110);
     margin: 0;
     padding: 0;
     border: none;
-    padding: 0 1rem;
+    flex: 1;
 }
 
 .na-table td {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 0;
     margin: 0;
     text-align: center;
     color: var(--text_dark);
+    flex: 1;
 }
 
 .na-table-rightborder th {
@@ -206,7 +214,9 @@ body {
 .na-table .rdm-list-status-cell::before {
     content: '';
     display: block;
-    height: 1.7rem;
+    position: absolute;
+    inset-block: 0;
+    inset-inline-start: 0;
     width: 0.3rem;
 }
 
